Added aria tags for list and listitem. Added counter

--- a/app/sass/components/manifest.scss
+++ b/app/sass/components/manifest.scss
@@ -12,3 +12,4 @@ Components – specific UI components. This is where majority of our work takes 
 @import "components-notice";
 @import "components-images";
 @import "components-check_answers";
+@import "components-character_counter";
